Fixed circles overlap

--- a/frontend/src/components/AssistantDashboard/CirclularPanel/CirclularPanel.module.scss
+++ b/frontend/src/components/AssistantDashboard/CirclularPanel/CirclularPanel.module.scss
@@ -41,14 +41,14 @@
 }
 
 .layer1 {
-  width: 200vw;
-  height: 200vw;
+  width: 230vw;
+  height: 230vw;
   animation: DefaultLayerAniamtion 20s linear infinite;
 }
 
 .layer2 {
-  width: 160vw;
-  height: 160vw;
+  width: 180vw;
+  height: 180vw;
   animation: DefaultLayerAniamtion 16s linear infinite alternate-reverse;
 }
 
